adicionado serviços  e logicas de adição de serviços

--- a/src/pages/Project.module.css
+++ b/src/pages/Project.module.css
@@ -24,4 +24,27 @@
     border-bottom: 1px solid #7a7a7a;
     margin-bottom: 1.2em;
     padding-bottom: 1.2em;
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.btn{
+    background-color: #222;
+    color: #fff;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    transition: 0.5s;
+    cursor: pointer;
+    max-height: 40px;
+    border: none;
+}
+
+
+.btn:hover{
+    color: #ffbb33;
+}
+
+.project_info{
+    width: 100%;
 }
